UtahLiveDataTest/src/objects/PerformanceMeasure__c.object
<CustomObject>
    <description>Performance Measure as part of Performance Management</description>
    <fields>
        <fullName>CategoryType__c</fullName>
        <label>CategoryType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performance Measure</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Performance Measures</relationshipLabel>
        <relationshipName>Performance_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>CASE(Type__c,&quot;KPI&quot;,KPI__r.KeyPerformanceSubIndicator__r.Name,&quot;WBS Task&quot;,WBSTask__r.Name,&quot;Deliverable&quot;,Deliverable__r.Title__c,&quot;Reporting Requirement&quot;,ReportingRequirement__r.ReportName__c,&quot;Title&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>KeyOutcome__c</referenceTo>
        <relationshipLabel>Performance Measures</relationshipLabel>
        <relationshipName>Performance_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Goal and Objective</label>
        <referenceTo>GoalObjective__c</referenceTo>
        <relationshipLabel>Performance Measures</relationshipLabel>
        <relationshipName>Performance_Measures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReportingRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST:Term and Condition</label>
        <referenceTo>TermCondition__c</referenceTo>
        <relationshipLabel>Performance Measures</relationshipLabel>
        <relationshipName>Performance_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>CASE(Type__c,&quot;KPI&quot;,KPI__r.KeyPerformanceSubIndicator__r.Name,&quot;WBS Task&quot;,WBSTask__r.Name,&quot;Deliverable&quot;,Deliverable__r.Title__c,&quot;Reporting Requirement&quot;,ReportingRequirement__r.ReportName__c,&quot;Title&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
                <value>
                    <fullName>WBS Task</fullName>
                </value>
                <value>
                    <fullName>Reporting Requirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WBSTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WBS Task</label>
        <referenceTo>WBSTaskSchedule__c</referenceTo>
        <relationshipLabel>Performance Measures</relationshipLabel>
        <relationshipName>Performance_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <description>Weightage of Performance Measure</description>
        <label>Weightage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Performance Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Objective__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMM-{0000}</displayFormat>
        <label>Performance Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Measures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Weightage_Check</fullName>
        <active>true</active>
        <description>Weightage_%_can_not_be_more_than_100%</description>
        <errorConditionFormula>if(Weightage__c&gt;100 || Weightage__c &lt;0,true,false)</errorConditionFormula>
        <errorMessage>Weightage should be between 0-100</errorMessage>
    </validationRules>
</CustomObject>